test/2-error/empty.test
{
  'compile-code': 1,
  'compile-err': '''\
error: test/2-error/empty.ploy:1:1: `main` is not defined in MAIN
  
  ^
'''
}
